--- a/appsrc/AppFVC/AppFVC.iOS/AppFVC.iOS.csproj
+++ b/appsrc/AppFVC/AppFVC.iOS/AppFVC.iOS.csproj
@@ -191,10 +191,13 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />
     <PackageReference Include="Prism.Unity.Forms" Version="7.2.0.1367" />
+    <PackageReference Include="Xam.Plugin.Geolocator">
+      <Version>4.5.0.6</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AppFVC\AppFVC.csproj">
-      <Project>{A682884C-CB44-4A89-B752-27BB634E0ABE}</Project>
+      <Project>{CCC3D4B9-3254-49F8-BCB0-30245018333F}</Project>
       <Name>AppFVC</Name>
     </ProjectReference>
   </ItemGroup>
