--- a/appsrc/AppFVC/AppFVC/AppFVC.csproj
+++ b/appsrc/AppFVC/AppFVC/AppFVC.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />
     <PackageReference Include="Prism.Unity.Forms" Version="7.2.0.1367" />
+    <PackageReference Include="Xam.Plugin.Geolocator" Version="4.5.0.6" />
   </ItemGroup>
 
   <ItemGroup>
