--- a/appsrc/AppFVC/AppFVC.iOS/Info.plist
+++ b/appsrc/AppFVC/AppFVC.iOS/Info.plist
@@ -48,5 +48,7 @@
     </array>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string> We need your location to fight Covid-19 </string>
   </dict>
 </plist>
