--- a/appsrc/AppFVC/AppFVC.iOS/AppFVC.iOS.csproj
+++ b/appsrc/AppFVC/AppFVC.iOS/AppFVC.iOS.csproj
@@ -211,5 +211,8 @@
   <ItemGroup>
     <BundleResource Include="Resources\iconExit50px.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\estou_bem.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
