--- a/appsrc/AppFVC/AppFVC/AppFVC.csproj
+++ b/appsrc/AppFVC/AppFVC/AppFVC.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\StatusHealthyPage.xaml.cs">
+      <DependentUpon>StatusHealthyPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\StatusQuarantinePage.xaml.cs">
       <DependentUpon>StatusQuarantinePage.xaml</DependentUpon>
     </Compile>
@@ -31,6 +34,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SmsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\StatusHealthyPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\StatusIsolationPage.xaml">
