--- a/appsrc/AppFVC/AppFVC.iOS/AppFVC.iOS.csproj
+++ b/appsrc/AppFVC/AppFVC.iOS/AppFVC.iOS.csproj
@@ -190,6 +190,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
     <PackageReference Include="Prism.Unity.Forms" Version="7.2.0.1422" />
     <PackageReference Include="Xam.Plugin.Geolocator">
