--- a/serversrc/jbanana.boot/org.jbanana.boot.floripavrscorona.server/src/main/resources/static/Phonebook.yml
+++ b/serversrc/jbanana.boot/org.jbanana.boot.floripavrscorona.server/src/main/resources/static/Phonebook.yml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  version: 1.0.0
+  version: 0.0.2
   title: Floripa vrs Corona - Phonebook
 paths:
 
@@ -63,6 +63,8 @@ paths:
               type: string
             age:
               type: integer
+            journal:
+              type: array
 
     'patch':
       tags:
@@ -87,6 +89,8 @@ paths:
               type: string
             age:
               type: integer
+            journal:
+              type: array
 
 
   /phonebook/contacts/id/{id1}:
@@ -106,6 +110,140 @@ paths:
         required: true
 
 
+  /phonebook/contacts/id/{id1}/journal:
+
+    'post':
+      tags:
+        - CoronaStatus
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/CoronaStatus'
+      parameters:
+      - in: path
+        type: string
+        name: id1
+        required: true
+
+      - in: body
+        name: body
+        required: true
+        schema:
+          type: object
+          properties:
+            id:
+              type: string
+            timestamp:
+              type: integer
+            status:
+              type: string
+              enum:
+              - UNLOCKED
+              - ISOLATED
+              - QUARANTINED
+
+    'get':
+      tags:
+        - CoronaStatus
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/CoronaStatus'
+      parameters:
+      - in: path
+        type: string
+        name: id1
+        required: true
+
+    'put':
+      tags:
+        - CoronaStatus
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/CoronaStatus'
+      parameters:
+      - in: path
+        type: string
+        name: id1
+        required: true
+
+      - in: body
+        name: body
+        required: true
+        schema:
+          type: object
+          properties:
+            id:
+              type: string
+            timestamp:
+              type: integer
+            status:
+              type: string
+              enum:
+              - UNLOCKED
+              - ISOLATED
+              - QUARANTINED
+
+    'patch':
+      tags:
+        - CoronaStatus
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/CoronaStatus'
+      parameters:
+      - in: path
+        type: string
+        name: id1
+        required: true
+
+      - in: body
+        name: body
+        required: true
+        schema:
+          type: object
+          properties:
+            id:
+              type: string
+            timestamp:
+              type: integer
+            status:
+              type: string
+              enum:
+              - UNLOCKED
+              - ISOLATED
+              - QUARANTINED
+
+
+  /phonebook/contacts/id/{id1}/journal/id/{id2}:
+
+    'get':
+      tags:
+        - CoronaStatus
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/CoronaStatus'
+      parameters:
+      - in: path
+        type: string
+        name: id1
+        required: true
+
+      - in: path
+        type: string
+        name: id2
+        required: true
+
+
 definitions:
 
   Contact:
@@ -119,3 +257,15 @@ definitions:
         type: string
       age:
         type: integer
+      journal:
+        type: array
+
+  CoronaStatus:
+    type: object
+    properties:
+      id:
+        type: string
+      timestamp:
+        type: integer
+      status:
+        type: string
