--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,16 +11,16 @@ jobs: # a collection of steps
 
       - checkout # check out source code to working directory
 
-      - restore_cache: # restore the saved cache after the first run or if `pom.xml` has changed
+      #- restore_cache: # restore the saved cache after the first run or if `pom.xml` has changed
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
-          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
+          #key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
       
       - run: mvn dependency:go-offline # gets the project dependencies
       
-      - save_cache: # saves the project dependencies
-          paths:
-            - ~/.m2
-          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
+      #- save_cache: # saves the project dependencies
+          #paths:
+            #- ~/.m2
+          #key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
       
       - run: mvn package # run the actual tests
       
