--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,9 @@ jobs:
 
     steps:
       - checkout # check out source code to working directory
-      - run: mvn clean install # run the actual tests
-      
-      #- store_artifacts: # store the uberjar as an artifact
-      # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-      #    path: target/demo-java-spring-0.0.1-SNAPSHOT.jar
+      - run: mvn clean package # run the actual tests
+      - store_artifacts: # Upload to: https://circleci.com/docs/2.0/artifacts/
+          path: target/org.cuidamane.server-0.0.1-SNAPSHOT.jar
+          
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
 
