--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,10 @@ jobs:
     steps:
       - checkout # check out source code to working directory
       - run: mvn clean package # run the actual tests
-      - store_artifacts: # Upload to: https://circleci.com/docs/2.0/artifacts/
-          path: target/org.cuidamane.server-0.0.1-SNAPSHOT.jar
+          
+      - store_artifacts:
+          path: ~/workspace/target/org.cuidamane.server-0.0.1-SNAPSHOT.jar
+          destination: org.cuidamane.server-0.0.1-SNAPSHOT.jar
           
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
 
