--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,11 @@ jobs:
 
     steps:
       - checkout # check out source code to working directory
-      - run: mvn clean package # run the actual tests
+      - run: mvn clean package
+      #- run: mvn -f ~/workspace/org.cuidamane.server/pom.xml package
           
       - store_artifacts:
-          path: ~/workspace/target/org.cuidamane.server-0.0.1-SNAPSHOT.jar
+          path: ~/workspace/org.cuidamane.server/target/org.cuidamane.server-0.0.1-SNAPSHOT.jar
           destination: org.cuidamane.server-0.0.1-SNAPSHOT.jar
           
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
