--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       #- run: mvn -f ~/workspace/org.cuidamane.server/pom.xml package
           
       - store_artifacts:
-          path: ~/workspace/org.cuidamane.server/target/org.cuidamane.server-0.0.1-SNAPSHOT.jar
+          path: ~/workspace/serversrc/org.cuidamane.server/target/org.cuidamane.server-0.0.1-SNAPSHOT.jar
           destination: org.cuidamane.server-0.0.1-SNAPSHOT.jar
           
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
