--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,11 @@ jobs:
           
       - store_artifacts:
           path: ~/workspace/serversrc/org.cuidamane.server/target/org.cuidamane.server-0.0.1-SNAPSHOT.jar
-          destination: org.cuidamane.server-0.0.1-SNAPSHOT.jar
+          destination: org.cuidamane.server.jar
+          
+      - store_artifacts:
+          path: ~/workspace/serversrc/org.cuidamane.server/target/org.cuidamane.server-0.0.1-SNAPSHOT-jar-with-dependencies.jar
+          destination: org.cuidamane.server-with-dependencies.jar
           
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
 
