--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-//**/.vertx/
-serversrc/jbanana.boot/org.jbanana.boot.floripavrscorona.server/.vertx/
-serversrc/jbanana.boot/org.jbanana.boot.floripavrscorona.server/Phonebook/
+serversrc/org.jbanana.boot/org.jbanana.boot.floripavrscorona.server/.vertx/
+serversrc/org.jbanana.boot/org.jbanana.boot.floripavrscorona.server/Phonebook/
+serversrc/org.cuidamane.server/Phonebook/
+serversrc/org.cuidamane.server/.vertx/
