--- a/appsrc/AppFVC/AppFVC.iOS/Info.plist
+++ b/appsrc/AppFVC/AppFVC.iOS/Info.plist
@@ -47,8 +47,16 @@
       <string>Icon-Small@3x</string>
     </array>
     <key>UILaunchStoryboardName</key>
-    <string>LaunchScreen</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string> We need your location to fight Covid-19 </string>
+          <string>LaunchScreen</string>
+		          <key>NSLocationWhenInUseUsageDescription</key>
+		          <string>This app needs access to location when open.</string>
+		          <key>NSLocationAlwaysUsageDescription</key>
+		          <string>This app needs access to location when in the background.</string>
+		          <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		          <string>This app needs access to location when open and in the background.</string>
+		          <key>UIBackgroundModes</key>
+		          <array>
+			            <string>location</string>
+		          </array>
   </dict>
 </plist>
