--- a/appsrc/AppFVC/AppFVC.Android/Properties/AndroidManifest.xml
+++ b/appsrc/AppFVC/AppFVC.Android/Properties/AndroidManifest.xml
@@ -2,5 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.appname">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-feature android:name="android.hardware.location" android:required="false" />
+  <uses-feature android:name="android.hardware.location.gps" android:required="false" />
+  <uses-feature android:name="android.hardware.location.network" android:required="false" />
 	<application android:label="AppFVC.Android" android:icon="@mipmap/ic_launcher"></application>
 </manifest>
