Textos dos componentes dos layouts alterados e margens alteradas e imagens inseridas no projeto.

--- a/appsrc/AppFVC/AppFVC.iOS/AppFVC.iOS.csproj
+++ b/appsrc/AppFVC/AppFVC.iOS/AppFVC.iOS.csproj
@@ -220,5 +220,11 @@
   <ItemGroup>
     <BundleResource Include="Resources\estou_bem.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\estou_de_isolamento.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\estou_de_quarentena.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
