--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ serversrc/org.jbanana.boot/org.jbanana.boot.floripavrscorona.server/.vertx/
 serversrc/org.jbanana.boot/org.jbanana.boot.floripavrscorona.server/Phonebook/
 serversrc/org.cuidamane.server/Phonebook/
 serversrc/org.cuidamane.server/.vertx/
+gource.mp4
