--- a/appsrc/AppFVC/AppFVC.iOS/Info.plist
+++ b/appsrc/AppFVC/AppFVC.iOS/Info.plist
@@ -24,8 +24,6 @@
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
 	<string>AppFVC</string>
-	<key>CFBundleIdentifier</key>
-	<string>com.companyname.appname</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>CFBundleIconFiles</key>
@@ -60,5 +58,9 @@
 	</array>
 	<key>CFBundleName</key>
 	<string>AppFVC</string>
+	<key>CFBundleIdentifier</key>
+	<string>br.com.cuidamaneh.app</string>
+	<key>CFBundleShortVersionString</key>
+	<string>0.1</string>
 </dict>
 </plist>
