--- a/appsrc/AppFVC/AppFVC.Android/AppFVC.Android.csproj
+++ b/appsrc/AppFVC/AppFVC.Android/AppFVC.Android.csproj
@@ -137,11 +137,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\Drawable\Maps.png" />
   </ItemGroup>
-  <ItemGroup>  
+  <ItemGroup>
     <AndroidResource Include="Resources\Drawable\iconLupa.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Drawable\iconLupa50px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\Drawable\MapaCorona.PNG" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
