--- a/appsrc/AppFVC/AppFVC.Android/AppFVC.Android.csproj
+++ b/appsrc/AppFVC/AppFVC.Android/AppFVC.Android.csproj
@@ -164,5 +164,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\Drawable\Quarentena.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\Drawable\VectorLocation.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
