--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ serversrc/org.jbanana.boot/org.jbanana.boot.floripavrscorona.server/Phonebook/
 serversrc/org.cuidamane.server/Phonebook/
 serversrc/org.cuidamane.server/.vertx/
 gource.mp4
+serversrc/oracle-serverless/.idea/
+serversrc/oracle-serverless/cuida-brasil/.idea/cuida-brasil.iml
+serversrc/oracle-serverless/cuida-brasil/.idea/
+serversrc/oracle-serverless/cuida-brasil/target/
