--- a/appsrc/AppFVC/AppFVC/AppFVC.csproj
+++ b/appsrc/AppFVC/AppFVC/AppFVC.csproj
@@ -30,7 +30,7 @@
     <EmbeddedResource Update="Styles\PagesStyle.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\CoronaMaps.xaml">
+    <EmbeddedResource Update="Views\TermsOfUse.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\AddressPage.xaml">
@@ -64,6 +64,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\StatusQuarantinePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\TermsOfUse.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\TermsPage.xaml">
