Nome do icone do botao da tela de status alterado.

--- a/appsrc/AppFVC/AppFVC.Android/AppFVC.Android.csproj
+++ b/appsrc/AppFVC/AppFVC.Android/AppFVC.Android.csproj
@@ -186,7 +186,7 @@
     <AndroidResource Include="Resources\Drawable\logo_cuidabrasil.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\Drawable\icon-doctor.png" />
+    <AndroidResource Include="Resources\Drawable\icon_doctor.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
