--- a/appsrc/AppFVC/AppFVC.iOS/AppFVC.iOS.csproj
+++ b/appsrc/AppFVC/AppFVC.iOS/AppFVC.iOS.csproj
@@ -256,7 +256,7 @@
     <BundleResource Include="Resources\logo_cuidabrasil.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\icon-doctor.png" />
+    <BundleResource Include="Resources\icon_doctor.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
