--- a/appsrc/AppFVC/AppFVC.iOS/Info.plist
+++ b/appsrc/AppFVC/AppFVC.iOS/Info.plist
@@ -36,7 +36,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>org.cuidabrasil.app</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.11</string>
+	<string>0.13</string>
 	<key>CFBundleName</key>
 	<string>CuidaBrasil</string>
 	<key>XSAppIconAssets</key>
@@ -45,7 +45,9 @@
 	<string>LaunchScreen</string>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Use this data  to inform and save data to notify user actions in calendar</string>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>3</string>
 </dict>
 </plist>
